# epdiy-esp-idf-6

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  builtin_waveforms.c  display_ops.c  epd_driver.c  library.json
examples/ble-image/: CMakeLists.txt  README.md  sdkconfig-lilygo-S3
examples/ble-image/main/: CMakeLists.txt  firasans_20.h  gatt_server_receive.cpp
examples/color/: CMakeLists.txt
examples/color/main/: main.c
examples/demo/main/: main.c
examples/dragon/: CMakeLists.txt  sdkconfig.defaults  usbscan.sh
examples/dragon/main/: CMakeLists.txt  main.c
examples/v7-usb-device/main/msc-sd/: msc_main.cpp
examples/www-image/main/: CMakeLists.txt  bmp-render.c  jpg-render-color.c  jpg-render.c  settings.h
hardware/ed133ut2_connector/: ed133ut2_connector-rescue.kicad_sym  ed133ut2_connector.kicad_prl  ed133ut2_connector.kicad_pro
hardware/epaper-breakout/: epaper-breakout-rescue.kicad_sym  epaper-breakout.kicad_prl  epaper-breakout.kicad_pro  epaper-breakout.kicad_sch
hardware/epdiy-v7/: BOM_lcsc.csv  BOM_lcsc.xlsx  epaper-breakout-all-pos.csv  epaper-breakout-top-pos.csv  epaper-breakout-top-pos.xlsx  epaper-breakout.kicad_pcb  epaper-breakout.kicad_prl  epaper-breakout.kicad_pro  epaper-breakout.kicad_sch  fp-lib-table  sym-lib-table
hardware/epdiy-v7/3dmodels/: x05a20h34g_34_FPC.step
hardware/epdiy-v7/footprints.pretty/: DC061065A_power.kicad_mod
hardware/epdiy-v7/gerbers/: epaper-breakout-B_Cu.gbl  epaper-breakout-B_Mask.gbs  epaper-breakout-B_Paste.gbp  epaper-breakout-B_Silkscreen.gbo  epaper-breakout-Edge_Cuts.gm1  epaper-breakout-F_Cu.gtl  epaper-breakout-F_Mask.gts  epaper-breakout-F_Paste.gtp  epaper-breakout-F_Silkscreen.gto  epaper-breakout-In1_Cu.g2  epaper-breakout-In2_Cu.g3  epaper-breakout-NPTH-drl_map.gbr  epaper-breakout-NPTH.drl  epaper-breakout-PTH-drl_map.gbr  epaper-breakout-PTH.drl
hardware/epdiy-v7/symbols/: DC-061-065A.kicad_sym  XKTF-005-SD.kicad_sym
hardware/extension-40_to_PCB_test/: extension-cable-all-pos.csv  extension-cable.kicad_pcb  extension-cable.kicad_pro  extension-cable.kicad_sch
hardware/extension-40_to_PCB_test/fabrication/v1.0/: extension-cable-B_Cu.gbl  extension-cable-B_Mask.gbs  extension-cable-B_Paste.gbp  extension-cable-B_Silkscreen.gbo  extension-cable-Edge_Cuts.gm1  extension-cable-F_Cu.gbr  extension-cable-F_Cu.gtl  extension-cable-F_Mask.gbr  extension-cable-F_Mask.gts  extension-cable-F_Paste.gbr  extension-cable-F_Paste.gtp  extension-cable-F_Silkscreen.gbr  extension-cable-F_Silkscreen.gto  extension-cable-NPTH-drl_map.gbr  extension-cable-NPTH.drl  extension-cable-PTH-drl_map.gbr  extension-cable-PTH.drl
hardware/extension-9_40_to_34_6inch/: BOM.csv  extension-cable-all-pos.csv  extension-cable.kicad_pcb  extension-cable.kicad_prl  extension-cable.kicad_sch
hardware/extension-9_40_to_34_6inch/fabrication/v1.0/: extension-cable-B_Cu.gbr  extension-cable-B_Mask.gbr  extension-cable-B_Paste.gbr  extension-cable-B_Silkscreen.gbr  extension-cable-Edge_Cuts.gbr  extension-cable-NPTH-drl_map.gbr  extension-cable-PTH.drl
hardware/extension-9_inch_33_to_34_6inch/: extension-cable.kicad_pcb  extension-cable.kicad_sch
hardware/extension-cable/: extension-cable.kicad_pro
include/: epd_driver.h  epd_internals.h
src/: displays.c  epd_board.h  epd_display.h  epdiy.c
src/board/: epd_board_common.c  epd_board_v7_raw.c
src/epd_driver/: CMakeLists.txt  Kconfig  builtin_waveforms.c  config_reg_v2.h  config_reg_v6_s2.h  display_ops.c  display_ops.h  epd_driver.c  epd_temperature.c  gpio_config_esp32.h  gpio_config_s2.h  highlevel.c  i2s_data_bus.c  i2s_data_bus_s3.c  i2s_data_bus_s3.h  lut.c  render.c  rmt_pulse.c
src/epd_driver/board/: epd_board_lilygo_s3_47.c  epd_board_s3_prototype.c
src/epd_driver/include/: epd_board.h  epd_driver.h  epd_internals.h  i2s_data_bus_s3.h
src/output_lcd/: lcd_driver.c
